--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treact-clone</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
+    <div class="row">
+     <div class="header">
+     <img class='logo'src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
+   <nav>
+    <div class="Logo">
+       Treact 
+    </div>
+   <div class="nav-links">
+        <ul>
+            <li class="nav-link"> <a href="">About</a></li>
+            <li class="nav-link"> <a href="">Blog</a></li>
+            <li class="nav-link"> <a href="">Pricing</a></li>
+            <li class="nav-link"> <a href="">Contact Us</a></li>
+            <li class="nav-link"> <a href="">Login</a></li>
+            <li class="nav-link"><button>Sign up</button></li>
+        </ul>
+   </div>
+        </nav>
+</div>
+</div>
+
+
     
 </body>
+
 </html>
