first page done

--- a/index.html
+++ b/index.html
@@ -18,20 +18,34 @@
     </div>
    <div class="nav-links">
         <ul>
-            <li class="nav-link"> <a href="">About</a></li>
-            <li class="nav-link"> <a href="">Blog</a></li>
-            <li class="nav-link"> <a href="">Pricing</a></li>
-            <li class="nav-link"> <a href="">Contact Us</a></li>
-            <li class="nav-link"> <a href="">Login</a></li>
-            <li class="nav-link"><button>Sign up</button></li>
+            <li class="nav-link"> <a href="">About</a> </li>
+            <li class="nav-link"> <a href="">Blog</a> </li>
+            <li class="nav-link"> <a href="">Pricing</a> </li>
+            <li class="nav-link"> <a href="">Contact Us</a> </li>
+            <li class="nav-link"> <a href="">Login</a> </li>
+            <li class="nav-link"><button class="signupp">Sign up</button></li>
         </ul>
    </div>
-        </nav>
+    </nav>
 </div>
 </div>
 
-
-    
+<div class="row-two">
+    <div class="motto">
+        Beautiful React Templates<span class="purple"> for you.</span>
+        <p class="sub-motto">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.
+        </p>
+        <div class='sign-up'>
+          <input class='signup' type="text" placeholder ="     Your E-mail Address">
+          <button class="get-started">Get Started</button>
+        </div>
+        <div class="trusted-holder">
+            <p class="trusted-customers">OUR TRUSTED CUSTOMERS</p>
+            <div class="trusted-partners-holder"><img class="trusted-partners-img" src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt=""></div>
+            </div>
+    </div>
+    <div class="react-img"><img class='react' src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt=""></div>
+</div>
 </body>
 
-</html>
+</html> 
