features head done

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
     </div>
     <div class="react-img"><img class='react' src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt=""></div>
 </div>
+
+<div class="features">
+    <div class="features-head">
+        <span class="purple-features">F E A T U R E S</span> </div>
+       <p class="amazing-service"> We have Amazing <span class="purple-service"> Service.</span> </p>
+       <p class="lorem-20">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, eum consequatur!  </p>
+       <p class="lorem-20"> Aspernatur dolorem hic nobis voluptatem minima ut pariatur reiciendis?</p>
+</div>
 </body>
 
 </html> 
