--- a/index.html
+++ b/index.html
@@ -54,6 +54,48 @@
        <p class="lorem-20">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, eum consequatur!  </p>
        <p class="lorem-20"> Aspernatur dolorem hic nobis voluptatem minima ut pariatur reiciendis?</p>
 </div>
+
+<div class="services-holder">
+    <div class="services">
+
+        <div class="service">
+            <div class="service-img-wrapper"><img class='service-img' src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt=""></div>
+           <div class="service-description"> Secure 
+            <p class="service-description-para"> We strictly only deal with vendors that provide top notch security.</p></div>
+        </div>
+
+     <div class="service">
+        <div class="service-img-wrapper"> <img class='service-img' src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt=""></div>
+      <div class="service-description"> 24/7 Support 
+        <p class="service-description-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, doloremque?</p></div>
+     </div>
+
+     <div class="service">
+        <div class="service-img-wrapper"> <img class='service-img' src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt=""> </div>
+        <div class="service-description"> Customizable 
+        <p class="service-description-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sores Optio, harum.</p></div>
+     </div>
+
+     <div class="service">
+        <div class="service-img-wrapper"><img class='service-img' src="https://treact.owaiskhan.me/static/media/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt=""></div>
+        <div class="service-description"> Reliable 
+        <p class="service-description-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, sed?</p></div>
+     </div>
+
+     <div class="service">
+        <div class="service-img-wrapper"> <img class='service-img' src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt=""> </div>
+        <div class="service-description"> Fast 
+        <p class="service-description-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, rem!</p> </div>
+     </div>
+
+     <div class="service">
+        <div class="service-img-wrapper">  <img class='service-img' src="https://treact.owaiskhan.me/static/media/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt=""></div>
+        <div class="service-description"> Easy 
+        <p class="service-description-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, error.</p> </div>
+     </div>
+
+    </div>
+</div>
 </body>
 
 </html> 
