--- a/index.html
+++ b/index.html
@@ -96,6 +96,35 @@
 
     </div>
 </div>
+
+<div class="row-three">
+<div class="quality">
+
+    <div class="quality-head">
+        Q U A L I T Y  W O R K 
+    </div>
+
+    <div class="quality-subhead">
+        Designed & Developed by <span class="professionals">Professionals.</span>
+    </div>
+
+    <div class="quality-para-wrapper">
+        <p class="quality-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt eius dolorum ex odio quisquam adipisci consequuntur blanditiis pariatur? Eosss et aliquam cumque provident mollitia enim deserunt quo nobis accusantium quam.</p>
+    </div>
+
+    <div class="quality-button-wrapper">
+        <button class="quality-button"> Learn More </button>
+    </div>
+
+    </div>
+
+    <div class="quality-img-wrapper">
+        <img class='quality-img' src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+    </div>
+</div>
+
+
+
 </body>
 
 </html> 
