--- a/index.html
+++ b/index.html
@@ -123,6 +123,42 @@
     </div>
 </div>
 
+<div class="steps-row">
+
+ <div class="steps-img-wrapper">
+      <img class='steps-img' src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+ </div>
+
+  <div class="steps-wrapper">
+    
+      <div class="steps-head">
+            S T E P S 
+
+          <div class="steps-subhead">
+            Easy to <span class="steps-span">Get Started.</span>
+           </div>
+       </div>
+
+        <div class="steps-steps">
+
+            <div class="step-1">
+                Register
+                <p class="step-para">Create an account with us using Google or Facebook.</p>
+            </div>
+
+            <div class="step-1">
+                Download
+                <p class="step-para">Browse and Download the template that you like from the marketplace.</p>
+            </div>
+
+            <div class="step-1">
+               Run 
+               <p class="step-para">Follow the instructions to setup and customize the template to your needs.</p>
+             </div>
+        </div>
+
+  </div>
+</div>
 
 
 </body>
