--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="personal-head">
                         PERSONAL 
                         <div class="personal-spend">
-                            $17
+                            $17.99
                         </div>
                     </div>
                         <div class="subscription-time">
@@ -256,34 +256,35 @@
                         </div>
                 </div>
                     
-                    <div class="pricing-personal">
+                    <div class="pricing-businesses">
                         <div class="personal-head">
-                            PERSONAL 
-                            <div class="personal-spend">
-                                $17
+                           BUSINESSES
+                            <div class="businesses-spend">
+                                $37.99
                             </div>
                         </div>
                             <div class="subscription-time">
                                 MONTHLY
                             </div>
                             <div class="subscription-personal-para-wrapper">
-                                FOR SMALL BUSINESSES
+                                FOR SMALL BUSINESS
                             </div>
                             <div class="subscription-personal-para">
-                                <ul class="pricing-ul">
-                                    <li class="pricing-list">60 Templates</li>
-                                    <li class="pricing-list">15 Landing Pages</li>
-                                    <li class="pricing-list">22 Internal Pages</li>
-                                    <li class="pricing-list">Priority Assistance</li>
+                                <ul class="pricing-ulb">
+                                    <li class="pricing-listb">60 Templates</li>
+                                    <li class="pricing-listb">15 Landing Pages</li>
+                                    <li class="pricing-listb">22 Internal Pages</li>
+                                    <li class="pricing-listb">Priority Assistance</li>
                                 </ul>
+                                <button class="three-plans"> BUY NOW </button>
                             </div>
                     </div>
 
                     <div class="pricing-personal">
                         <div class="personal-head">
-                            PERSONAL 
+                            ENTERPRISE 
                             <div class="personal-spend">
-                                $17
+                                $57.99
                             </div>
                         </div>
                             <div class="subscription-time">
