--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             MONTHLY
                         </div>
                         <div class="subscription-personal-para-wrapper">
-                            FOR INDIVIDUALS
+                            For Individuals
                         </div>
                         <div class="subscription-personal-para">
                             <ul class="pricing-ul">
@@ -253,21 +253,22 @@
                                 <li class="pricing-list">12 Internal Pages</li>
                                 <li class="pricing-list">Basic Assistance</li>
                             </ul>
+                            <button class="personal-buy">BUY NOW</button>
                         </div>
                 </div>
                     
                     <div class="pricing-businesses">
-                        <div class="personal-head">
-                           BUSINESSES
+                        <div class="personal-headb">
+                           BUSINESS
                             <div class="businesses-spend">
                                 $37.99
                             </div>
                         </div>
-                            <div class="subscription-time">
+                            <div class="subscription-timeb">
                                 MONTHLY
                             </div>
-                            <div class="subscription-personal-para-wrapper">
-                                FOR SMALL BUSINESS
+                            <div class="subscription-personal-para-wrapperb">
+                                For Small Businesses
                             </div>
                             <div class="subscription-personal-para">
                                 <ul class="pricing-ulb">
@@ -276,12 +277,13 @@
                                     <li class="pricing-listb">22 Internal Pages</li>
                                     <li class="pricing-listb">Priority Assistance</li>
                                 </ul>
-                                <button class="three-plans"> BUY NOW </button>
+                                <button class="business-buy"> BUY NOW </button>
                             </div>
                     </div>
 
-                    <div class="pricing-personal">
+                    <div class="pricing-enterprise">
                         <div class="personal-head">
+                            <div class="enterprise-highlight"></div>
                             ENTERPRISE 
                             <div class="personal-spend">
                                 $57.99
@@ -291,7 +293,7 @@
                                 MONTHLY
                             </div>
                             <div class="subscription-personal-para-wrapper">
-                                FOR LARGE COMPANIES
+                                For Large Companies
                             </div>
                             <div class="subscription-personal-para">
                                 <ul class="pricing-ul">
@@ -300,6 +302,7 @@
                                     <li class="pricing-list">37 Internal Pages</li>
                                     <li class="pricing-list">Personal Assistance</li>
                                 </ul>
+                                <button class="enterprise-buy">BUY NOW</button>
                             </div>
                     </div>
                </div>
